# mlody

./: .bazeliskrc  BUILD.bazel  MODULE.bazel  gazelle_python.yaml  pyproject.toml
common/python/starlarkish/: BUILD.bazel  STARLARK_DEVIATIONS.md  __init__.py
common/python/starlarkish/core/: BUILD.bazel  struct.py  struct_test.py
common/python/starlarkish/evaluator/: BUILD.bazel  evaluator.py  evaluator_test.py  testing.py
mlody/: BUILD.bazel  CLAUDE.md  REQUIREMENTS.md  SPEC.md  roots.mlody
mlody/cli/: BUILD.bazel  __main__.py  main.py  main_test.py  shell.py  shell_test.py  show.py  show_test.py
mlody/common/: BUILD.bazel  REQUIREMENTS.md  action.mlody  action_test.py  attrs.mlody  context.py  locations.mlody  locations_test.py  sandbox.mlody  struct.py  task.mlody  task_test.py  types.mlody  types_test.py  values.mlody  values_test.py
mlody/core/: BUILD.bazel  builtins.mlody  plan.py  plan_test.py  rule.mlody  targets.py  targets_test.py  workspace.py  workspace_test.py
mlody/lsp/: BUILD.bazel  CLAUDE.md  FUTURE.md  REQUIREMENTS.md  SPEC.md  __main__.py  _pex_main.py  completion.py  completion_test.py  definition.py  definition_test.py  diagnostics.py  diagnostics_test.py  log_handler.py  log_handler_test.py  parser.py  parser_test.py  server.py  server_test.py
mlody/openspec/changes/sparse-clone/: REQUIREMENTS.md  SPEC.md
mlody/resolver/: BUILD.bazel  __init__.py  cache.py  cache_test.py  errors.py  errors_test.py  git_client.py  git_client_test.py  resolver.py  resolver_test.py
mlody/rfc/: regex_builder.org  starlarkish.org
mlody/teams/lexica/: paper.mlody
mlody/tools/hugging-face/: BUILD.bazel  hf-download  hf_download.py
requirements/: all.txt  runtime.txt  test.in  tools.in
tools/: BUILD.bazel  downloader.cfg  java21.bazelrc  o-repin  tools.lock.json
tools/codelabs/: README.md
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
