load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@gazelle//:def.bzl", "gazelle")
load("@pip//:requirements.bzl", "all_whl_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

# TODO this seems to do nothing
exports_files(
    [
    ],
    visibility = ["//:__subpackages__"],
)

# TODO test and binary don't seem to take effect
# gazelle:python_binary_naming_convention $package_name$
# gazelle:python_library_naming_convention $package_name$_lib
# gazelle:python_test_naming_convention $package_name$_test
# gazelle:exclude githooks/*
gazelle(
    name = "gazelle",
    env = {
        "ENABLE_LANGUAGES": ",".join([
            "go",
            "starlark",
            "proto",
            "python",
        ]),
    },
    gazelle = "@multitool//tools/gazelle",
)

exports_files(
    ["pyproject.toml"],
    visibility = ["//:__subpackages__"],
)

# Produce Omega specific python targets
# gazelle:map_kind py_binary o_py_binary //build/bzl:python.bzl
# gazelle:map_kind py_library o_py_library //build/bzl:python.bzl
# gazelle:map_kind py_test o_py_test //build/bzl:python.bzl
#
# Don't walk into virtualenvs when looking for python sources.
# We don't intend to plant BUILD files there.
# gazelle:exclude **/*.venv
#
# Fetches metadata for python packages we depend on.
modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

# Provide a mapping from an import to the installed package that provides it.
# Needed to generate BUILD files for .py files.
# This macro produces two targets:
# - //:gazelle_python_manifest.update can be used with `bazel run`
#   to recalculate the manifest
# - //:gazelle_python_manifest.test is a test target ensuring that
#   the manifest doesn't need to be updated
gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "pip",
)
