####
# Misc
include("//build/modules:misc.MODULE.bazel")
##

####
# Python
include("//build/modules:python.MODULE.bazel")
##

####
# Java
# (we don't do Java, but copybara requires java 10+ and bazel's default is java 8)
##
include("//build/modules:java.MODULE.bazel")

####
# Hermetic tool support
include("//build/modules:tools.MODULE.bazel")
##

