####
# Misc
include("//build/modules:misc.MODULE.bazel")

# used in both go and python. Not happy about having it here, but I
# don't have a better solution.
bazel_dep(name = "gazelle", version = "0.47.0")
##

####
# Python
include("//build/modules:python.MODULE.bazel")
##

####
# Go
include("//build/modules:go.MODULE.bazel")
##

####
# Java
# (we don't do Java, but copybara requires java 10+ and bazel's default is java 8)
##
include("//build/modules:java.MODULE.bazel")

####
# LaTeX support
include("//build/modules:latex.MODULE.bazel")
##

####
# Hermetic tool support
include("//build/modules:tools.MODULE.bazel")
##
