[project]
name = "Omega"
classifiers = ["Private :: Do Not Upload"]
version = "0"

# Dependencies should NOT use "Version Matching clauses" (matching operator `==`)
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
# This project uses 'uv pip compile' from https://github.com/astral-sh/uv
# which will ensure the resolved versions of both direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges 
# of dependency versions are not compatible.
dependencies = [
  # a funny external dependency we use in smoketests. We use it for
  # tests because hopefully it is not used for anything in production.
  # See: https://pypi.org/project/pyfiglet/
  "pyfiglet"
]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]

# see https://docs.basedpyright.com/v1.23.1/configuration/config-files/
[tool.basedpyright]
venvPath = "/home/mav/.local/share"
venv = "lsp-venv"
typeCheckingMode = "strict"
stubPath = "/home/mav/.local/share/lsp-venv-typings"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13.2"
pythonPlatform = "Linux"
