[project]
name = "Omega"
classifiers = ["Private :: Do Not Upload"]
version = "0"

# Dependencies should NOT use "Version Matching clauses" (matching operator `==`)
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
# This project uses 'uv pip compile' from https://github.com/astral-sh/uv
# which will ensure the resolved versions of both direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges 
# of dependency versions are not compatible.
dependencies = [

  # a funny external dependency we use in smoketests. We use it for
  # tests because hopefully it is not used for anything in production.
  # See: https://pypi.org/project/pyfiglet/
  "pyfiglet",

  # a prossibly temporary LSP multiplexer because eglot doesn't do
  # multiple servers.
  # See: https://github.com/joaotavora/rassumfrassum/tree/master
  "rassumfrassum",

  # a fake file system that mocks the Python file system modules.
  # See: https://github.com/pytest-dev/pyfakefs
  "pyfakefs",

  # a library for nice console output
  # See: https://github.com/Textualize/rich
  "rich",

  # a library for creating CLI applications.
  # See: https://click.palletsprojects.com/en/stable/
  "click",

  # a library for HTTP request handling
  # See: https://pypi.org/project/requests/
  "requests",

  # an advanced Python REPL used for the `mlody shell` interactive session.
  # See: https://github.com/prompt-toolkit/ptpython
  "ptpython",

  # a pythonic generic language server framework used for the mlody LSP server.
  # See: https://github.com/openlawlibrary/pygls
  "pygls",

  # tree-sitter core library — provides Parser, Language, Tree, Node types.
  # Used by the mlody LSP server to parse .mlody (Starlark) documents.
  # See: https://github.com/tree-sitter/py-tree-sitter
  "tree-sitter",

  # Starlark grammar for tree-sitter.
  # See: https://github.com/nickel-lang/tree-sitter-starlark
  "tree-sitter-starlark",

  # git repository introspection (branch, commit, etc.) for mlody context.
  # See: https://gitpython.readthedocs.io/
  "gitpython"
  # HuggingFace model hub client for downloading models.
  # See: https://github.com/huggingface/huggingface_hub
  "huggingface_hub",
]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]

# see https://docs.basedpyright.com/v1.23.1/configuration/config-files/
[tool.basedpyright]
venvPath = "/home/mav/.local/share"
venv = "lsp-venv"
typeCheckingMode = "strict"
stubPath = "/home/mav/.local/share/lsp-venv-typings"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13.2"
pythonPlatform = "Linux"
