load("//build/bzl:python.bzl", "o_py_library", "o_py_test")

exports_files(["rule.mlody"])

o_py_library(
    name = "targets_lib",
    srcs = ["targets.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "targets_test",
    srcs = ["targets_test.py"],
    deps = [
        ":core_lib",
        "//common/python/starlarkish/core:core_lib",
        "@pip//pytest",
    ],
)

o_py_library(
    name = "plan_lib",
    srcs = ["plan.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "plan_test",
    srcs = ["plan_test.py"],
    deps = [
        ":core_lib",
        "@pip//pytest",
    ],
)

o_py_library(
    name = "workspace_lib",
    srcs = ["workspace.py"],
    data = ["builtins.mlody"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":targets_lib",
        "//common/python/starlarkish/core:core_lib",
        "//common/python/starlarkish/evaluator:evaluator_lib",
        "//mlody/common:context_lib",
        "@pip//rich",
    ],
)

o_py_test(
    name = "workspace_test",
    srcs = ["workspace_test.py"],
    deps = [
        ":core_lib",
        "@pip//pyfakefs",
        "@pip//pytest",
        "@pip//rich",
    ],
)

o_py_library(
    name = "core_lib",
    srcs = [
        "__init__.py",
        "plan.py",
        "targets.py",
        "workspace.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//common/python/starlarkish/evaluator:evaluator_lib",
        "//mlody:mlody_lib",
        "//mlody/common:context_lib",
        "@pip//rich",
    ],
)
