load("//build/bzl:python.bzl", "o_py_library", "o_py_test")

o_py_library(
    name = "evaluator_lib",
    srcs = [
        "evaluator.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//common/python/starlarkish/core:core_lib"],
)

o_py_library(
    name = "testing",
    testonly = True,
    srcs = ["testing.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "evaluator_test",
    srcs = ["evaluator_test.py"],
    deps = [
        ":evaluator_lib",
        ":testing",
        "@pip//pyfakefs",
    ],
)
